5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1721_3037.log
== TEST (2019-05-02 18:16:07) 
-- CODE:
x=float(input("valor de x: "))
if(x<=-1)or (x>=1):
	msg=x**2
	print(round(msg,4))
elif(-1<0) and (x>-1) and (x<0):
	msg=x
	print(round(msg,4))
elif(0<1) and (x>0) and (x<1):
	msg=x
	print(round(msg,4))
else(x==0):
	msg=1
	print(round(msg,4))
-- ERROR:
File "XXXX", line 11
    else(x==0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:16:18) 
-- CODE:
x=float(input("valor de x: "))
if(x<=-1)or (x>=1):
	msg=x**2
	print(round(msg,4))
elif(-1<0) and (x>-1) and (x<0):
	msg=x
	print(round(msg,4))
elif(0<1) and (x>0) and (x<1):
	msg=x
	print(round(msg,4))
elif(x==0):
	msg=1
	print(round(msg,4))
-- OUTPUT:
3.9601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:16:35) 
-- CODE:
x=float(input("valor de x: "))
if(x<=-1)or (x>=1):
	msg=x**2
	print(round(msg,4))
elif(-1<0) and (x>-1) and (x<0):
	msg=x
	print(round(msg,4))
elif(0<1) and (x>0) and (x<1):
	msg=x
	print(round(msg,4))
elif(x==0):
	msg=1
	print(round(msg,4))
-- OUTPUT:
3.9601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:16:46) 
-- CODE:
x=float(input("valor de x: "))
if(x<=-1)or (x>=1):
	msg=x**2
	print(round(msg,4))
elif(-1<0) and (x>-1) and (x<0):
	msg=x
	print(round(msg,4))
elif(0<1) and (x>0) and (x<1):
	msg=x
	print(round(msg,4))
elif(x==0):
	msg=1
	print(round(msg,4))
-- OUTPUT:
3.9601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:16:51) 
-- CODE:
x=float(input("valor de x: "))
if(x<=-1)or (x>=1):
	msg=x**2
	print(round(msg,4))
elif(-1<0) and (x>-1) and (x<0):
	msg=x
	print(round(msg,4))
elif(0<1) and (x>0) and (x<1):
	msg=x
	print(round(msg,4))
elif(x==0):
	msg=1
	print(round(msg,4))
-- EXECUTION TIME:
0.160481
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
3.9601
---- user output:
3.9601
-- TEST CASE 2:
---- input:
0.99
---- correct output:
0.99
---- user output:
0.99
-- TEST CASE 3:
---- input:
-1.01
---- correct output:
1.0201
---- user output:
1.0201
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
